pxc/tests/test_31_thrattr/up4.px
namespace up4;
import common "";

threaded function {f} int fts(int x)
{
  int r = f(3 + x);
  return r;
}

function int getbz() {
  threaded function int foo(int x) { // error: parent function is not threaded
    return x;
  }
  int x = fts{foo}(5);
  return x;
}

function void t1() {
  println(getbz());
}

t1();

